[gd_scene load_steps=6 format=3 uid="uid://difi78q3aeqpp"]

[ext_resource type="Script" path="res://scripts/2d/gui/unit/orderMenu/unitOrdersMenu.gd" id="1_tg1bn"]

[sub_resource type="Theme" id="Theme_373r3"]
VBoxContainer/constants/separation = 1

[sub_resource type="Theme" id="Theme_qf4k4"]

[sub_resource type="Theme" id="Theme_4rlmk"]

[sub_resource type="Theme" id="Theme_1r4b5"]

[node name="UnitOrdersMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_tg1bn")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = -3.0
offset_top = -4.0
offset_right = 159.0
offset_bottom = 196.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_right = 155.0
offset_bottom = 191.0
theme = SubResource("Theme_373r3")

[node name="Patrol" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_qf4k4")
text = "Z PATROL"
alignment = 0

[node name="Quick" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_4rlmk")
text = "X MOVE FAST"
alignment = 0

[node name="Cautious" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_1r4b5")
text = "C CAUTIOUS"
alignment = 0

[node name="Disengage" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_1r4b5")
text = "V DISENGAGE"
alignment = 0

[node name="FireAt" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_1r4b5")
text = "B FIRE AT"
alignment = 0

[node name="Ambush" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = SubResource("Theme_1r4b5")
text = "N AMBUSH"
alignment = 0

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="ordersMenu" from="." to="." method="_on_orders_menu"]
[connection signal="mouse_entered" from="ColorRect" to="." method="_on_color_rect_mouse_entered"]
[connection signal="mouse_exited" from="ColorRect" to="." method="_on_color_rect_mouse_exited"]
[connection signal="mouse_entered" from="VBoxContainer" to="." method="_on_v_box_container_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer" to="." method="_on_v_box_container_mouse_exited"]
[connection signal="mouse_entered" from="VBoxContainer/Patrol" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="VBoxContainer/Patrol" to="." method="_on_button_mouse_exited"]
[connection signal="mouse_exited" from="VBoxContainer/Quick" to="." method="_on_button_mouse_exited"]
[connection signal="mouse_exited" from="VBoxContainer/Cautious" to="." method="_on_button_mouse_exited"]
[connection signal="mouse_exited" from="VBoxContainer/Disengage" to="." method="_on_button_mouse_exited"]
[connection signal="mouse_exited" from="VBoxContainer/FireAt" to="." method="_on_button_mouse_exited"]
[connection signal="mouse_exited" from="VBoxContainer/Ambush" to="." method="_on_button_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
